# kindle_word_collector

./: .gitignore  README.md  README.rst  pyproject.toml
kindle_word_collector/: kindle_word_collector.py
tests/: test_kindle_word_collector.py
