[tool.poetry]
name = "kindle_word_collector"
version = "0.1.0"
description = "Collects words looked up on an Amazon kindle reader, which are stored on its SQLite DB, and adds them to Lexicon"
authors = ["roboto84 <7658704+roboto84@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = '^3.10'
python-dotenv = '^0.15.0'
lexicon = {git = 'https://github.com/roboto84/lexicon.git', tag = 'v0.5.0'}

[tool.poetry.dev-dependencies]
pytest = '^7.2.0'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
